# tree-sitter-sway

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  eslint.config.mjs  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml  lint.yml  publish.yml
bindings/c/: tree-sitter-sway.h  tree-sitter-sway.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_sway/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterSwayTests/: TreeSitterSwayTests.swift
corpus/: declarations.txt  expressions.txt  keywords.txt  literals.txt  patterns.txt  source_files.txt  types.txt
queries/: highlights.scm  indents.scm  injections.scm
scripts/: parse-and-check.sh  parse-and-check.sh~
src/: grammar.json  node-types.json  parser.c  scanner.c
